# llm-dynamic-quantization

./: .gitignore  README.md  STEP3_SUMMARY.md  problem-sheet.md  pyproject.toml  report.md
src/: __init__.py  eval.py  evaluation.py  train.py  training.py
src/cpt/: __init__.py  config.py  model.py  quantization.py
src/quant/: __init__.py  config.py  model.py  quantization.py
src/switchable_precision/: __init__.py  config.py  eval.py  layers.py  model.py  train.py
tests/: step1.py  step2.py  step3.py  step3_4configs.py  step3_4configs_quick.py  step3_cascade_test.py  step5.py
