[project]
name = "llm-dynamic-quantization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.3",
]
